# Educational-LLM

./: README.md  dockerfile  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
api/: endpoints.py
core/: agents.py  config.py  prompts.py  utils.py
docs/: devcontainer.md
tests/: test_agents.py  test_utils.py
