[tool.poetry]
name = "QGS_RAG"
version = "0.0.1"
description = "QGS RAG"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
langchain-community = "^0.3.0"
langchain-core = "^0.3.0"
langchain_groq = "^0.2.0"
pypdf = "^5.0.0"
faiss-cpu = "^1.9.0.post1"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "^0.32.1"
python-multipart = "^0.0.17"
sentence-transformers = "^3.3.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
